fixed some issues with the counters that keep track of figures, updated the example.md to discuss how to refer to a figure by number, and fixed a broken image link. also checking in the first half of a draft of unit 1

--- a/_config.yml
+++ b/_config.yml
@@ -44,6 +44,10 @@ plugins:
 
 exclude:
  - _units/_*
+ - MUTOR-1_0-CNMAT
+ - Loui_course_materials
+ - Psychoakustik
+ - src
 
 collections:
  units:
